# This file is in /src
SET(CMAKE_C_COMPILER g++)
SET(CMAKE_CXX_COMPILER g++)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++0x -g")
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} MAIN_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/parser PARSER_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/semantics SEMANTICS_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/absyntax ABSYNTAX_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/absyntax_utils ABSYNTAX_UTILS_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/generator GENERATOR_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/generator/utility UTILITY_SRC)
# ADD_SUBDIRECTORY(parser)

ADD_EXECUTABLE(iec_compiler ${MAIN_SRC} 
								${ABSYNTAX_SRC} 
								${ABSYNTAX_UTILS_SRC} 
								${GENERATOR_SRC} 
								${PARSER_SRC} 
								${UTILITY_SRC})